--- a/gestaourbana/static/css/src/variables.scss
+++ b/gestaourbana/static/css/src/variables.scss
@@ -8,4 +8,6 @@ $main-color-focus: rgba(180, 180, 180, 0.25);
 $main-text-color: rgba(51, 51, 51, 1);
 $secondary-text-color: rgba(151, 151, 151, 1);
 
+$light-bg: #cecece;
+
 $nav-hairline: #e2e2e2;
