--- a/gestaourbana/static/css/src/variables.scss
+++ b/gestaourbana/static/css/src/variables.scss
@@ -1,12 +1,12 @@
 $title-font: "Roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $text-font: "Georgia", Times, "Times New Roman", serif;
 
-$main-color: rgba(215, 50, 47, 1);
-$main-color-hover: rgba(215, 50, 47, 0.5);
-$main-color-focus: rgba(180, 180, 180, 0.25);
+$main-color:#212121;
+$main-color-focus: #D9D9D9;
+$main-color-hover: #F0F0F0;
 
-$main-text-color: rgba(51, 51, 51, 1);
-$secondary-text-color: rgba(151, 151, 151, 1);
+$main-text-color: #5A5A59;
+$secondary-text-color: #AFAFAE;
 
 $light-bg: #cecece;
 
