--- a/categories/templates/categories/category_index_page.html
+++ b/categories/templates/categories/category_index_page.html
@@ -5,18 +5,64 @@
 {% block body_class %}template-blogindexpage{% endblock %}
 
 {% block content %}
-	<h1>{{ page.title }}</h1>
-	<div class="intro">{{ page.resumo|richtext }}</div>
+	<div id="category-info" class="row">
+		<h3 style="color: {{ page.categoria.cor }};" id="page-title">{{ page.title }}</h3>
+		<div class="row">
+			<div class="columns six">
+				{% with page.imagem_principal as imagem_principal %}
+					{% if imagem_principal %}
+						{% image imagem_principal width-500 %}
+					{% endif %}
+				{% endwith %}
+				<p class="caption">{{ page.legenda }}</p>
+			</div>
+			<div class="columns six">
+				{{ page.resumo|richtext }}
+			</div>
+		</div>
+	</div>
+	
+	<div id="category-page-feed">
+		<h1>Páginas relacionadas</h1>
+		<div class="row">
+			{% for pages in categorypages %}
+				{% with pages=pages.specific %}
+					<a class="subpage columns six" href="{% pageurl pages %}">
+						<h3 style="color: {{ page.categoria.cor }};">{{ pages.title }}</h3>
+						<p>{{ pages.descricao }}</p>
+					</a>
+				{% endwith %}
+			{% endfor %}
+		</div>
 
-	{% for pages in categorypages %}
-		{% with pages=pages.specific %}
-			<h2><a href="{% pageurl pages %}">{{ pages.title }}</a></h2>
-		{% endwith %}
-	{% endfor %}
-
-	{% for pages in newspages %}
-		{% with pages=pages.specific %}
-			<h2><a href="{% pageurl pages %}">{{ pages.title }}</a></h2>
-		{% endwith %}
-	{% endfor %}
+		<h1>Notícias</h1>
+		{% for news in newspages %}
+			{% with news=news.specific %}
+				{% if forloop.counter == 1 or forloop.counter == 4  %}
+					<div class="row">
+				{% endif %}
+					<div class="news columns four">
+						<a href="{% pageurl news %}">
+							<div class="news-image">
+								{% with news.imagem_principal as imagem_principal %}
+									{% if imagem_principal %}
+										{% image imagem_principal fill-300x150 %}
+									{% endif %}
+								{% endwith %}
+							</div>
+							<div class="news-content">
+								<p class="date">{{ news.date|date:"d/m/Y" }}</p>
+								<h5 style="border-left-color: {{ news.categoria.cor }};">{{ news.title }}</h5>
+							</div>
+						</a>
+					</div>
+				{% if forloop.counter == 3 or forloop.counter == 6 or forloop.last  %}
+					</div>
+				{% endif %}
+			{% endwith %}
+		{% endfor %}
+		<div class="see-more u-cf">
+			<a href="/noticias" class="button u-pull-right">Ver mais notícias</a>
+		</div>
+	</div>
 {% endblock %}
