--- a/news/templates/news/news_index_page.html
+++ b/news/templates/news/news_index_page.html
@@ -14,7 +14,7 @@
 					<div class="four columns news-image">
 						{% with news.imagem_principal as imagem_principal %}
 							{% if imagem_principal %}
-								{% image imagem_principal fill-300x200 %}
+								{% image imagem_principal width-300 %}
 							{% endif %}
 						{% endwith %}
 						<p class="caption">{{ news.legenda }}</p>
