--- a/news/templates/news/news_page.html
+++ b/news/templates/news/news_page.html
@@ -6,10 +6,8 @@
 
 {% block body_class %}template-blogpage{% endblock %}
 
-{% block content %}
-    <p><a href="{{ page.get_parent.url }}">Retornar para página de notícias</a></p>
-    
-	<h1>{{ page.title }}</h1>
+{% block content %}    
+	<h1 id="page-title">{{ page.title }}</h1>
 	<p class="meta">{{ page.date }}</p>
 
 	<div class="intro">{{ page.intro }}</div>
@@ -43,6 +41,8 @@
             <div>{{ block }}</div>
         {% endif %}
     {% endfor %}
+
+    <p><a href="{{ page.get_parent.url }}">Retornar para página de notícias</a></p>
     
     {% render_comment_form for page %}
     {% render_comment_list for page %}
