--- a/gestaourbana/templates/includes/header.html
+++ b/gestaourbana/templates/includes/header.html
@@ -2,6 +2,7 @@
 
 <header class="row">
     <div class="nine columns">
+        <div id="mobile-menu-toggle"><p><a href="#"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a></p></div>
         <div id="pmsp">
             <a href="/" tabindex="0"><img id="logo-prefeitura" src="{% static 'img/logo_prefeitura.jpg' %}" alt="Prefeitura de São Paulo"></a>
         </div>        
