--- a/gestaourbana/static/css/src/main.scss
+++ b/gestaourbana/static/css/src/main.scss
@@ -16,6 +16,14 @@
  * Base
  */
 
+body.activated {
+	overflow: hidden;
+}
+
+figure img {
+	height: auto !important;
+}
+
 html {
   font-size: 16px;
 }
@@ -25,7 +33,8 @@ p a {
 	color: blue;
 }
 
-a {
+a,
+.btn {
 	color: $main-color;
 	text-decoration: none;
 	transition: opacity 150ms ease-in;
@@ -50,11 +59,13 @@ h6 {
 	color: $main-color;
 }
 
-.button {
+.button,
+input.btn {
 	border-radius: 0;
 }
 
-.button.button-primary {
+.button.button-primary,
+.btn.btn-primary {
 	background-color: $main-color;
 	border: none;
 	color: white;
@@ -143,6 +154,26 @@ header {
 
 		&.nine {
 			display: flex;
+		}
+	}
+}
+
+@media (max-width: 550px) {
+	header {
+		.columns {
+			width: auto;
+
+			&#entenda {
+				float: right;
+			}
+		}
+	}
+}
+
+@media (max-width: 440px) {
+	header {
+		#pmsp {
+			display: none;
 		}
 	}
 }
